# secureflowlabs-mvp

./: .gitignore  AGENTS.md  LICENSE  README.md
backend/: .gitignore  AGENTS.md  Cargo.toml  README.md
backend/.config/: nextest.toml
backend/src/: error.rs  lib.rs  main.rs  pipeline.rs  routes.rs
backend/src/db/: capability_node.rs  mod.rs  normalized_endpoint.rs  normalized_schema_entry.rs  raw_schema.rs  source.rs
backend/src/handlers/: capabilities.rs  endpoints.rs  execution_plans.rs  health.rs  mod.rs  providers.rs  upload.rs
backend/src/openapi/: capability.rs  mod.rs  normalizer.rs  parser.rs  pipeline.rs
backend/src/payloads/: health.rs
backend/src/runtime/: auth_definition.rs  error.rs  execution_plan.rs  executor.rs  http_executor.rs  mod.rs  request_definition.rs  retry_policy.rs  safety_policy.rs  validation.rs  workflow_step.rs
backend/tests/: capability_nodes.rs  health.rs  providers.rs  raw_schema_db.rs  upload.rs
backend/tests/common/: mod.rs
frontend/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/capabilities/: +page.svelte
frontend/src/routes/endpoints/: +page.svelte
frontend/src/routes/execution-plans/: +page.svelte
frontend/src/routes/providers/: +page.svelte
