[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Stätter <thomas.staetter@gmail.com>"]

[dependencies]
axum = "0.8"
bson = "3"
mongodb = "3"
openapiv3 = "2"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "5.5.0"
