[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Stätter <thomas.staetter@gmail.com>"]

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
dotenvy = "0.15"
mongodb = "3"
openapiv3 = "2"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
tower = "0.5"
anyhow = "1"
axum-test = "20"
